PRL-4125 - added test case for save additional order documents